Fixed text overflow causing grid blowout

--- a/wwwroot/web-components/persistent-object-group/persistent-object-group.scss
+++ b/wwwroot/web-components/persistent-object-group/persistent-object-group.scss
@@ -33,6 +33,7 @@
 
         ::slotted(vi-persistent-object-attribute-presenter) {
             grid-area: var(--vi-persistent-object-group--attribute-area);
+            overflow: hidden;
         }
     }
 }
