--- a/wwwroot/web-components/sensitive/sensitive.scss
+++ b/wwwroot/web-components/sensitive/sensitive.scss
@@ -1,5 +1,7 @@
 :host {
     display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
     &:not([disabled])[is-app-sensitive] {
         filter: blur(5px);
